--- a/_config.yml
+++ b/_config.yml
@@ -23,4 +23,4 @@ version:          1.0.0
 github:
   repo:           https://github.com/poole/lanyon
 
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
