--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,6 @@ paginate:         5
 version:          1.0.0
 
 github:
-  repo:           https://github.com/poole/lanyon
+  repo:           https://github.com/subrahmanyam-gundimeda/lanyon
 
 theme: jekyll-theme-hacker
